JOC-1367 - prepare Java11 - delete deprecations